force-app/main/default/objects/DHS_Training__c/DHS_Training__c.object-meta.xml
<CustomObject>
    <label>Training</label>
    <nameField>
        <displayFormat>Training-{000000}</displayFormat>
        <label>Trainings Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Trainings</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>