force-app/main/default/objects/DHS_Training__c/fields/Proctored_By__c.field-meta.xml
<CustomField>
    <fullName>Proctored_By__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Proctored By</label>
    <length>255</length>
    <type>Text</type>
</CustomField>