force-app/main/default/objects/DHS_Training__c/fields/Training_Completed_Date__c.field-meta.xml
<CustomField>
    <fullName>Training_Completed_Date__c</fullName>
    <label>Training Completed Date</label>
    <type>Date</type>
</CustomField>