force-app/main/default/objects/DHS_Training__c/fields/Training_Name__c.field-meta.xml
<CustomField>
    <fullName>Training_Name__c</fullName>
    <label>Training Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>